fixed issue with custom theme, added extracttextplugin

--- a/ant-theme-vars.less
+++ b/ant-theme-vars.less
@@ -1,6 +1,8 @@
 // ant default vars
 // https://github.com/ant-design/ant-design/blob/master/components/style/themes/default.less
+@import "~antd/dist/antd.less";
 
-@primary-color: #193D71;
+@primary-color: @red-6;
+
 
 // @icon-url is handled in the webpack.${environment}.config and assets/styles/common/iconfonts.less files
